--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -1,9 +1,12 @@
 .root {
-  @apply grid gap-4 grid-cols-3 grid-rows-2;
+  @apply grid gap-0 grid-cols-1;
+
+  @screen md {
+    @apply grid-cols-3 grid-rows-2;
+  }
 
   & > * {
     @apply row-span-1 overflow-hidden;
-    height: 500px;
     max-height: 800px;
 
     @screen lg {
@@ -11,5 +14,3 @@
     }
   }
 }
-
-
