--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -16,7 +16,12 @@
 }
 
 .layoutA {
-  color: rebeccapurple;
+  & > *:nth-child(6n + 1),
+  & > *:nth-child(6n + 5) {
+    @screen lg {
+      @apply col-span-2 row-span-2;
+    }
+  }
 }
 
 .layoutB {
