--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -1,8 +1,8 @@
 .root {
   @apply grid gap-0 grid-cols-1;
 
-  @screen md {
-    @apply grid-cols-3 grid-rows-2;
+  @screen lg {
+   @apply grid-cols-3 grid-rows-2;
   }
 
   & > * {
@@ -16,6 +16,8 @@
 }
 
 .layoutA {
+  /* 1, 7, 13 */
+  /* 5, 11, 17 */
   & > *:nth-child(6n + 1),
   & > *:nth-child(6n + 5) {
     @screen lg {
