--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -1,5 +1,15 @@
 .root {
-  @apply relative;
+  @apply relative max-h-full;
+
+  &:hover {
+    & .productBg:before {
+      transform: scale(0.99);
+    }
+
+    & .productImage {
+      transform: scale(1.15);
+    }
+  }
 
   &:nth-child(6n + 1) .productBg {
     @apply bg-violet;
@@ -16,6 +26,10 @@
   &:nth-child(6n + 6) .productBg {
     @apply bg-cyan;
   }
+}
+
+.productImage {
+  @apply scale-100 h-auto;
 }
 
 .productBg {
