--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -29,7 +29,7 @@
 }
 
 .productImage {
-  @apply scale-100 h-auto;
+  @apply scale-100 transition-transform block duration-500;
 }
 
 .productBg {
@@ -37,7 +37,7 @@
   background-color: #212529;
 
   &:before {
-    @apply block w-full h-full bg-repeat-space;
+    @apply transition-transform duration-500 block w-full h-full bg-repeat-space;
     content: '';
     background-image: url('/product-pattern-bg.svg');
   }
@@ -57,12 +57,12 @@
   line-height: 2.2rem;
 
   & span {
-    @apply py-4 px-6;
+    @apply py-4 px-6 bg-primary;
     box-decoration-break: clone;
   }
 }
 
 .productPrice {
-  @apply pb-4 pt-2 px-6 font-semibold text-sm;
+  @apply bg-primary pb-4 pt-2 px-6 font-semibold text-sm;
   letter-spacing: 0.4px;
 }
