--- a/components/ui/Grid/Grid.module.css
+++ b/components/ui/Grid/Grid.module.css
@@ -22,6 +22,9 @@
   }
 }
 
-.layoutB {
-  color: saddlebrown;
+.layoutB > *:nth-child(6n + 2),
+.layoutB > *:nth-child(6n + 4) {
+  @screen lg {
+    @apply col-span-2 row-span-2;
+  }
 }
